fixed collapse nav view
Former-commit-id: 44ca779ed27691e8af8e80542fc0d3045dc5aadc

--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -87,3 +87,7 @@ div.desc {
 .search-input > input:focus {
   outline: none;
 }
+
+.navbar-fixed-top .navbar-collapse{
+    max-height: 500px;
+}
